--- a/config.py.template
+++ b/config.py.template
@@ -5,6 +5,10 @@ main_pcb_file = 'example/1-PCB_Main.json'
 out_sch_file = 'example/output_sch.json'
 out_pcb_file = 'example/output_pcb.json'
 
+# Use 1 for default suffix with underscore and channel name (e.g. R1_CH1)
+# Use 2 to append channel name in front with a colon (e.g. CH1:R1)
+channel_prefix_style = 1
+
 channel_sources = [
 	(
 		'example/1-Schematic_example_channel.json',		# sch file
